--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -38,11 +38,7 @@
             <item
                 android:id="@+id/drawer_menu_logout"
                 android:icon="@drawable/ic_logout"
-                android:title="Share" />
-            <item
-                android:id="@+id/drawer_menu_leave_application"
-                android:icon="@drawable/ic_leave_application"
-                android:title="Send" />
+                android:title="Logout" />
         </menu>
     </item>
 
