--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -9,23 +9,20 @@
     tools:context=".views.DetailEvent">
 
 
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_detail_event_imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="82dp"
-        android:adjustViewBounds="true"
-        android:maxHeight="200dp"
-        app:layout_constraintBottom_toTopOf="@+id/activity_detail_event_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:src="@drawable/ic_launcher_background"
+        app:civ_border_color="#FFF"
+        app:civ_border_width="1dp" />
 
     <TextView
         android:id="@+id/activity_detail_event_name"
