--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -7,14 +7,17 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/activity_detail_user_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:maxHeight="200dp"
-        android:layout_marginTop="50dp"
-        tools:srcCompat="@tools:sample/avatars" />
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/activity_detail_use_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/ic_launcher_background"
+        app:civ_border_color="#FFF"
+        app:civ_border_width="1dp" />
 
     <TextView
         android:id="@+id/activity_detail_user_name"
