--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -7,13 +7,16 @@
     android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_match_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="30dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/ic_launcher_background"
+        app:civ_border_color="@color/blueCharte"
+        app:civ_border_width="1dp" />
 
     <TextView
         android:id="@+id/item_match_username"
